Lock is already taken when handling async events, don't lock again in scsipi_lookup_periph.

Fixes PR kern/51641.